refactor: consistently use helpText instead of helptext #715

--- a/components/input/apiExamples/email.html
+++ b/components/input/apiExamples/email.html
@@ -1,4 +1,4 @@
 <auro-input type="email" bordered required>
   <span slot="label">Email address</span>
-  <span slot="helptext">Please enter your email address.</span>
+  <span slot="helpText">Please enter your email address.</span>
 </auro-input>
