--- a/components/input/apiExamples/emphasized/basic.html
+++ b/components/input/apiExamples/emphasized/basic.html
@@ -4,7 +4,7 @@
 
 <auro-input id="alpha" value="lax" layout="emphasized" shape="box" size="xl" placeholder="Departure" style="width: 249px;" ondark required>
   <label slot="label">From</label>
-  <span slot="helptext">Example help text</span>
+  <span slot="helpText">Example help text</span>
   <span slot="displayValue">
     <div>
       <div class="mainText">LAX</div>
@@ -15,15 +15,15 @@
 
 <auro-input id="beta" layout="emphasized" shape="pill" size="xl" placeholder="Departure" style="width: 249px;" ondark required>
   <label slot="label">From</label>
-  <span slot="helptext">Example help text</span>
+  <span slot="helpText">Example help text</span>
 </auro-input>
 
 <auro-input id="charlie" layout="emphasized-left" shape="pill-left" size="xl" placeholder="Departure" style="width: 249px;" ondark required>
   <label slot="label">From</label>
-  <span slot="helptext">Example help text</span>
+  <span slot="helpText">Example help text</span>
 </auro-input>
 
 <auro-input id="delta" layout="emphasized-right" shape="pill-right" size="xl" placeholder="Departure" style="width: 249px;" ondark required>
   <label slot="label">From</label>
-  <span slot="helptext">Example help text</span>
+  <span slot="helpText">Example help text</span>
 </auro-input>
