--- a/components/input/apiExamples/number.html
+++ b/components/input/apiExamples/number.html
@@ -1,4 +1,4 @@
 <auro-input type="number" bordered required>
   <span slot="label">Number of Passengers</span>
-  <span slot="helptext">Please enter the number of passengers.</span>
+  <span slot="helpText">Please enter the number of passengers.</span>
 </auro-input>
