--- a/components/select/apiExamples/emphasized/basic-ondark.html
+++ b/components/select/apiExamples/emphasized/basic-ondark.html
@@ -53,7 +53,7 @@
 
   <auro-select layout="emphasized" shape="pill" size="xl" value="flights" ondark required style="display:inline-block;">
     <span slot="label">Select Example</span>
-    <span slot="helptext">no displayValue in menuoptions</span>
+    <span slot="helpText">no displayValue in menuoptions</span>
     <auro-menu nocheckmark>
       <auro-menuoption value="flights">
         <auro-icon category="terminal" name="plane-diag-stroke" customcolor></auro-icon> Flights
