--- a/components/input/apiExamples/activeLabel.html
+++ b/components/input/apiExamples/activeLabel.html
@@ -1,4 +1,4 @@
 <auro-input activeLabel bordered>
   <span slot="label">Address</span>
-  <span slot="helptext">Please enter your home address.</span>
+  <span slot="helpText">Please enter your home address.</span>
 </auro-input>
