--- a/components/input/apiExamples/error.html
+++ b/components/input/apiExamples/error.html
@@ -3,5 +3,5 @@
 <br /><br />
 <auro-input id="setCustomErrorExample" error="Initial error attribute value" bordered>
   <span slot="label">Name</span>
-  <span slot="helptext">Please enter your full name.</span>
+  <span slot="helpText">Please enter your full name.</span>
 </auro-input>
