--- a/components/input/apiExamples/resetState.html
+++ b/components/input/apiExamples/resetState.html
@@ -2,5 +2,5 @@
 <br /><br />
 <auro-input id="resetStateExample" bordered minlength="12" value="Auro Team" setCustomValidityTooShort="Please enter your full name!">
   <span slot="label">Full Name</span>
-  <span slot="helptext">Please enter your full name.</span>
+  <span slot="helpText">Please enter your full name.</span>
 </auro-input>
