--- a/components/input/apiExamples/setCustomValidity.html
+++ b/components/input/apiExamples/setCustomValidity.html
@@ -1,4 +1,4 @@
 <auro-input bordered required minlength="3" setCustomValidity="Sorry, please enter your first and last name (one space required).">
   <span slot="label">Full Name</span>
-  <span slot="helptext">Please enter your full name.</span>
+  <span slot="helpText">Please enter your full name.</span>
 </auro-input>
