--- a/components/select/apiExamples/snowflake/basic.html
+++ b/components/select/apiExamples/snowflake/basic.html
@@ -53,7 +53,7 @@
 
   <auro-select layout="snowflake" shape="snowflake" placeholder="placeholder text" required style="display:inline-block;">
     <span slot="label">Select Example Placeholder</span>
-    <span slot="helptext">no displayValue in menuoptions</span>
+    <span slot="helpText">no displayValue in menuoptions</span>
     <auro-menu nocheckmark>
       <auro-menuoption value="flights">
         <auro-icon category="terminal" name="plane-diag-stroke" customcolor></auro-icon> Flights
