docs: cleanup input examples

--- a/components/input/apiExamples/activeLabel.html
+++ b/components/input/apiExamples/activeLabel.html
@@ -1,4 +1,4 @@
-<auro-input activeLabel bordered>
+<auro-input activeLabel>
   <span slot="label">Address</span>
   <span slot="helpText">Please enter your home address.</span>
 </auro-input>
