--- a/components/input/apiExamples/custom.html
+++ b/components/input/apiExamples/custom.html
@@ -1,1 +1,5 @@
-<custom-input bordered></custom-input>
+<custom-input>
+  <span slot="label">Label</span>
+  <span slot="helpText">Help Text</span>
+</custom-input>
+
