--- a/components/input/apiExamples/day.html
+++ b/components/input/apiExamples/day.html
@@ -1,3 +1,4 @@
-<auro-input type="date" format="dd" bordered>
+<auro-input type="date" format="dd">
   <span slot="label">Day</span>
+  <span slot="helpText">Help Text</span>
 </auro-input>
