--- a/components/input/apiExamples/disabled.html
+++ b/components/input/apiExamples/disabled.html
@@ -1,3 +1,4 @@
-<auro-input disabled bordered type="date">
-  <span slot="label">Arrival date</span>
+<auro-input disabled type="date">
+  <span slot="label">Disabled</span>
+  <span slot="helpText">Help Text</span>
 </auro-input>
