--- a/components/input/apiExamples/format.html
+++ b/components/input/apiExamples/format.html
@@ -1,1 +1,4 @@
-<auro-input bordered format="47440000"></auro-input>
+<auro-input format="47440000">
+  <span slot="label">Custom format</span>
+  <span slot="helpText">Format is: 47440000</span>
+</auro-input>
