--- a/components/input/apiExamples/inputmode.html
+++ b/components/input/apiExamples/inputmode.html
@@ -1,1 +1,4 @@
-<auro-input bordered inputmode="tel" />
+<auro-input inputmode="tel">
+  <span slot="label">Telephone</span>
+  <span slot="helpText">Help Text</span>
+</auro-input>
