--- a/components/input/apiExamples/maxDate.html
+++ b/components/input/apiExamples/maxDate.html
@@ -1,3 +1,4 @@
-<auro-input type="date" max="03/25/2023" setCustomValidityRangeOverflow="The selected date is past the defined maximum date." bordered>
+<auro-input type="date" max="03/25/2023" setCustomValidityRangeOverflow="The selected date is past the defined maximum date.">
   <span slot="label">Choose a date</span>
+  <span slot="helpText">Help Text</span>
 </auro-input>
