--- a/components/input/apiExamples/minLength.html
+++ b/components/input/apiExamples/minLength.html
@@ -1,4 +1,4 @@
-<auro-input minlength="4" setCustomValidityTooShort="Please enter a full voucher code." bordered required>
+<auro-input minlength="4" setCustomValidityTooShort="Please enter a full voucher code." required>
   <span slot="label">Voucher Code</span>
   <span slot="helpText">Please enter your 4 character voucher code.</span>
 </auro-input>
