--- a/components/input/apiExamples/minNumber.html
+++ b/components/input/apiExamples/minNumber.html
@@ -1,3 +1,4 @@
-<auro-input type="number" min="10" setCustomValidityRangeUnderflow="The selected value is below the defined minimum." bordered>
+<auro-input type="number" min="10" setCustomValidityRangeUnderflow="The selected value is below the defined minimum.">
   <span slot="label">Choose a number</span>
+  <span slot="helpText">Help Text</span>
 </auro-input>
