--- a/components/input/apiExamples/monthDayYear.html
+++ b/components/input/apiExamples/monthDayYear.html
@@ -1,3 +1,4 @@
-<auro-input type="date" bordered>
+<auro-input type="date">
   <span slot="label">Arrival date</span>
+  <span slot="helpText">Help Text</span>
 </auro-input>
