--- a/components/input/apiExamples/monthYear.html
+++ b/components/input/apiExamples/monthYear.html
@@ -1,3 +1,4 @@
-<auro-input type="date" format="mm/yy" bordered>
+<auro-input type="date" format="mm/yy">
   <span slot="label">Expiration date</span>
+  <span slot="helpText">Help Text</span>
 </auro-input>
