--- a/components/input/apiExamples/onDark.html
+++ b/components/input/apiExamples/onDark.html
@@ -1,1 +1,4 @@
-<auro-input onDark bordered shape="rounded" size="lg"></auro-input>
+<auro-input ondark shape="rounded" size="lg">
+  <span slot="label">Label</span>
+  <span slot="helpText">Help Text</span>
+</auro-input>
