--- a/components/input/apiExamples/password.html
+++ b/components/input/apiExamples/password.html
@@ -1,4 +1,4 @@
-<auro-input type="password" required bordered>
+<auro-input type="password" required>
   <span slot="label">Password</span>
   <span slot="helpText">Please enter a secure password.</span>
 </auro-input>
