--- a/components/input/apiExamples/programmaticValue.html
+++ b/components/input/apiExamples/programmaticValue.html
@@ -1,4 +1,4 @@
-<auro-input value="Alaska Airlines is the best!" bordered>
+<auro-input value="Alaska Airlines is the best!">
   <span slot="label">Name</span>
   <span slot="helpText">Please enter your full name.</span>
 </auro-input>
