--- a/components/input/apiExamples/readonly.html
+++ b/components/input/apiExamples/readonly.html
@@ -1,7 +1,7 @@
 <auro-button id="setReadonlyValueBtn">Set Value to Auro Alaska</auro-button>
 <auro-button id="resetReadonlyValueBtn">Reset</auro-button>
 <br /><br />
-<auro-input readonly bordered id="readonlyExample">
+<auro-input readonly id="readonlyExample">
   <span slot="label">Name</span>
   <span slot="helpText">Please enter your full name.</span>
 </auro-input>
