--- a/components/input/apiExamples/required.html
+++ b/components/input/apiExamples/required.html
@@ -1,4 +1,4 @@
-<auro-input required bordered placeholder="John Doe">
+<auro-input required placeholder="John Doe">
   <span slot="label">Full name</span>
   <span slot="helpText">Please enter your full name.</span>
 </auro-input>
