--- a/components/input/apiExamples/tel.html
+++ b/components/input/apiExamples/tel.html
@@ -1,1 +1,4 @@
-<auro-input type="tel" bordered></auro-input>
+<auro-input type="tel">
+  <span slot="label">Telephone</span>
+  <span slot="helpText">Help Text</span>
+</auro-input>
