--- a/components/input/apiExamples/telFormat.html
+++ b/components/input/apiExamples/telFormat.html
@@ -1,1 +1,4 @@
-<auro-input type="tel" format="+22 999 99 9999" bordered></auro-input>
+<auro-input type="tel" format="+22 999 99 9999">
+  <span slot="label">Telephone</span>
+  <span slot="helpText">Help Text</span>
+</auro-input>
