--- a/components/input/apiExamples/validateOnInput.html
+++ b/components/input/apiExamples/validateOnInput.html
@@ -1,4 +1,4 @@
-<auro-input validateOnInput bordered required pattern="[a-zA-Z-.']+( +[a-zA-Z-.']+)+" setCustomValidityPatternMismatch="Full name requires two or more names with at least one space.">
+<auro-input validateOnInput required pattern="[a-zA-Z-.']+( +[a-zA-Z-.']+)+" setCustomValidityPatternMismatch="Full name requires two or more names with at least one space.">
   <span slot="label">Full Name</span>
   <span slot="helpText">Please enter your full name as it appears on the card.</span>
 </auro-input>
