--- a/components/input/apiExamples/yearMonthDay.html
+++ b/components/input/apiExamples/yearMonthDay.html
@@ -1,3 +1,4 @@
-<auro-input type="date" format="yyyy/mm/dd" bordered>
+<auro-input type="date" format="yyyy/mm/dd">
   <span slot="label">Arrival date</span>
+  <span slot="helpText">Help Text</span>
 </auro-input>
