--- a/components/input/apiExamples/basic.html
+++ b/components/input/apiExamples/basic.html
@@ -1,1 +1,4 @@
-<auro-input bordered shape="rounded" size="lg"></auro-input>
+<auro-input>
+  <span slot="label">Label</span>
+  <span slot="helpText">Help Text</span>
+</auro-input>
