--- a/components/input/apiExamples/creditCardIcon.html
+++ b/components/input/apiExamples/creditCardIcon.html
@@ -1,4 +1,4 @@
-<auro-input icon type="credit-card" bordered required>
+<auro-input icon type="credit-card" required>
   <span slot="label">Card number</span>
   <span slot="helpText">Valid credit card numbers must include 16 digits (15 for Amex).</span>
 </auro-input>
