--- a/components/input/apiExamples/maxNumber.html
+++ b/components/input/apiExamples/maxNumber.html
@@ -1,3 +1,4 @@
-<auro-input type="number" max="10" setCustomValidityRangeOverflow="The selected value is above the defined maximum." bordered>
+<auro-input type="number" max="10" setCustomValidityRangeOverflow="The selected value is above the defined maximum.">
   <span slot="label">Choose a number</span>
+  <span slot="helpText">Help Text</span>
 </auro-input>
