--- a/components/input/apiExamples/minDate.html
+++ b/components/input/apiExamples/minDate.html
@@ -1,3 +1,4 @@
-<auro-input type="date" min="03/25/2023" setCustomValidityRangeUnderflow="The selected date is before the defined minimum date." bordered>
+<auro-input type="date" min="03/25/2023" setCustomValidityRangeUnderflow="The selected date is before the defined minimum date.">
   <span slot="label">Choose a date</span>
+  <span slot="helpText">Help Text</span>
 </auro-input>
