--- a/components/input/apiExamples/noValidate.html
+++ b/components/input/apiExamples/noValidate.html
@@ -1,4 +1,4 @@
-<auro-input noValidate required bordered>
+<auro-input noValidate required>
   <span slot="label">Address</span>
   <span slot="helpText">Please enter your home address.</span>
 </auro-input>
