--- a/components/input/apiExamples/onDarkDisabled.html
+++ b/components/input/apiExamples/onDarkDisabled.html
@@ -1,3 +1,4 @@
-<auro-input onDark disabled bordered type="date">
+<auro-input onDark disabled type="date">
   <span slot="label">Arrival date</span>
+  <span slot="helpText">Help Text</span>
 </auro-input>
