--- a/components/input/apiExamples/onDarkError.html
+++ b/components/input/apiExamples/onDarkError.html
@@ -1,7 +1,7 @@
 <auro-button onDark id="setCustomErrorBtnOnDark">Set Custom Error</auro-button>
 <auro-button onDark id="setCustomErrorClearBtnOnDark">Clear Custom Error</auro-button>
 <br /><br />
-<auro-input onDark id="setCustomErrorExampleOnDark" error="Initial error attribute value" bordered>
+<auro-input onDark id="setCustomErrorExampleOnDark" error="Initial error attribute value">
   <span slot="label">Name</span>
   <span slot="helpText">Please enter your full name.</span>
 </auro-input>
