--- a/components/input/apiExamples/placeholder.html
+++ b/components/input/apiExamples/placeholder.html
@@ -1,4 +1,4 @@
-<auro-input placeholder="John Doe" bordered required>
+<auro-input placeholder="John Doe" required>
   <span slot="label">Full name</span>
   <span slot="helpText">Please enter your full name.</span>
 </auro-input>
