--- a/components/input/apiExamples/swapValue.html
+++ b/components/input/apiExamples/swapValue.html
@@ -1,9 +1,11 @@
-<auro-input id="swapExampleLeft" bordered>
+<auro-input id="swapExampleLeft">
   <span slot="label">Left Input</span>
+  <span slot="helpText">Help Text</span>
 </auro-input>
 <auro-button id="swapExampleBtn">Swap Values</auro-button>
-<auro-input id="swapExampleRight" bordered>
+<auro-input id="swapExampleRight">
   <span slot="label">Right Input</span>
+  <span slot="helpText">Help Text</span>
 </auro-input>
 
 <style>
