fix: correct tab behavior in combobox

--- a/components/input/src/styles/classic/style.scss
+++ b/components/input/src/styles/classic/style.scss
@@ -58,18 +58,7 @@
   }
 
   .accents {
-    &.left {
-      padding-left: 8px;
-    }
-
-    &.right {
-      padding-right: 8px;
-    }
-
-    [auro-icon],
-    auro-icon {
-      margin-right: 8px;
-    }
+    padding: 0 8px;
   }
 
   &.withValue {
