--- a/components/dropdown/src/styles/classic/bibStyles.scss
+++ b/components/dropdown/src/styles/classic/bibStyles.scss
@@ -17,7 +17,7 @@
   position: fixed;
   z-index: var(--depth-tooltip, #{vac.$ds-depth-tooltip});
   display: none;
-  isolation: isolate;
+  // isolation: isolate;
 }
 
 :host(:not([matchWidth])) {
@@ -27,14 +27,15 @@
 }
 
 :host([isfullscreen]) {
- position: fixed;
  top: 0;
  left: 0;
+ width: 100dvw;
+ height: 100dvh;
 
  .container {
-    width: 100dvw;
+    width: 100%;
     max-width: none;
-    height: 100dvh;
+    height: 100%;
     max-height: none;
     border-radius: unset;
     margin-top: 0;
