fix: add missing styles for counter-group typeicons #736

--- a/components/counter/apiExamples/dropdown-snowflake.html
+++ b/components/counter/apiExamples/dropdown-snowflake.html
@@ -1,6 +1,7 @@
 <!-- Example of counter-group properties -->
 <auro-counter-group max="10" min="2" isDropdown layout="snowflake">
   <div slot="bib.fullscreen.headline">Group fullscreen label</div>
+  <auro-icon slot="typeIcon" category="interface" name="account-stroke" customColor></auro-icon>
   <div slot="label">Snowflake Dropdown Group</div>
   <div slot="helpText">Total must be between 2-10</div>
   
