fix: center counter label and value in snowflake #729

--- a/components/counter/src/styles/counter-group.scss
+++ b/components/counter/src/styles/counter-group.scss
@@ -16,6 +16,14 @@
   }
 }
 
+:host([layout="snowflake"]) {
+  [auro-dropdown] {
+    .mainContent {
+      align-items: center;
+    }
+  }
+}
+
 .triggerContent {
   display: flex;
   width: 100%;
