refactor: select placeholder and other styling work

--- a/components/combobox/apiExamples/floaterConfig.html
+++ b/components/combobox/apiExamples/floaterConfig.html
@@ -1,7 +1,8 @@
 <div style="width: 350px">
   <auro-combobox offset="20" noFlip placement="bottom-end">
     <span slot="bib.fullscreen.headline">Bib Header</span>
-    <span slot="label">bottom-end bib with 20px offset and noFlip</span>
+    <span slot="label">Label</span>
+    <span slot="helpText">bottom-end bib with 20px offset and noFlip</span>
     <auro-menu>
       <auro-menuoption value="Apples" id="option-0">Apples</auro-menuoption>
       <auro-menuoption value="Oranges" id="option-1">Oranges</auro-menuoption>
@@ -14,7 +15,8 @@
 
   <auro-combobox offset="20" placement="bottom-end">
     <span slot="bib.fullscreen.headline">Bib Header</span>
-    <span slot="label">bottom-end bib with 20px offset and flip</span>
+    <span slot="label">Label</span>
+    <span slot="helpText">bottom-end bib with 20px offset and flip</span>
     <auro-menu>
       <auro-menuoption value="Apples" id="option-0">Apples</auro-menuoption>
       <auro-menuoption value="Oranges" id="option-1">Oranges</auro-menuoption>
@@ -27,7 +29,8 @@
 
   <auro-combobox offset="20" noFlip placement="right" autoPlacement>
     <span slot="bib.fullscreen.headline">Bib Header</span>
-    <span slot="label">right bib with 20px offset, noFlip and autoPlacement</span>
+    <span slot="label">Label</span>
+    <span slot="helpText">right bib with 20px offset, noFlip and autoPlacement</span>
     <auro-menu>
       <auro-menuoption value="Apples" id="option-0">Apples</auro-menuoption>
       <auro-menuoption value="Oranges" id="option-1">Oranges</auro-menuoption>
