--- a/components/dropdown/apiExamples/floaterConfig.html
+++ b/components/dropdown/apiExamples/floaterConfig.html
@@ -18,8 +18,9 @@
       </p>
     </div>
     <div slot="trigger">
-      Trigger for bottom-end bib with 20px offset and noFlip
+      Trigger
     </div>
+    <span slot="helpText">Trigger for bottom-end bib with 20px offset and noFlip</span>
   </auro-dropdown>
 </div>
 
@@ -37,6 +38,9 @@
       </p>
     </div>
     <div slot="trigger">
+      Trigger
+    </div>
+    <div slot="helpText">
       Trigger for bottom-end bib with 20px offset and flip
     </div>
   </auro-dropdown>
@@ -56,6 +60,9 @@
       </p>
     </div>
     <div slot="trigger">
+      Trigger
+    </div>
+    <div slot="helpText">
       Trigger for right bib with 20px offset, autoPlacement and noFlip
     </div>
   </auro-dropdown>
