--- a/components/select/apiExamples/classic/basic.html
+++ b/components/select/apiExamples/classic/basic.html
@@ -1,6 +1,6 @@
 <auro-select placeholder="Placeholder content">
   <span slot="bib.fullscreen.headline">Bib Header</span>
-  <span slot="label">Name</span>
+  <span slot="label">Name with placeholder</span>
   <auro-menu>
     <auro-menuoption value="Apples" id="option-0">Apples</auro-menuoption>
     <auro-menuoption value="Oranges" id="option-1">Oranges</auro-menuoption>
