--- a/components/input/src/styles/color.scss
+++ b/components/input/src/styles/color.scss
@@ -2,7 +2,12 @@
 
 // ---------------------------------------------------------------------
 
-/* stylelint-disable scss/dollar-variable-pattern, selector-class-pattern, max-nesting-depth, selector-max-class */
+/* stylelint-disable
+  scss/dollar-variable-pattern,
+  selector-class-pattern,
+  max-nesting-depth,
+  selector-max-class
+  */
 
 // Support for fallback values
 @use '@aurodesignsystem/design-tokens/dist/themes/alaska/SCSSVariables--alaska' as v;
@@ -68,9 +73,11 @@
 :host(:not([ondark])[disabled]) {
   --ds-auro-input-border-color: var(--ds-basic-color-border-subtle, #{v.$ds-basic-color-border-subtle});
   --ds-auro-input-label-text-color: var(--ds-basic-color-texticon-disabled, #{v.$ds-basic-color-texticon-disabled});
+  --ds-auro-input-placeholder-text-color: var(--ds-basic-color-texticon-disabled, #{v.$ds-basic-color-texticon-disabled});
 }
 
 :host([ondark][disabled]) {
   --ds-auro-input-border-color: var(--ds-advanced-color-button-primary-border-inverse-disabled, #{v.$ds-advanced-color-button-primary-border-inverse-disabled});
   --ds-auro-input-label-text-color: var(--ds-basic-color-texticon-inverse-disabled, #{v.$ds-basic-color-texticon-inverse-disabled});
+  --ds-auro-input-placeholder-text-color: var(--ds-basic-color-texticon-inverse-disabled, #{v.$ds-basic-color-texticon-inverse-disabled});
 }
