fix: adjust helptext layout in radio and checkbox #520

--- a/components/radio/src/styles/auro-radio-group.scss
+++ b/components/radio/src/styles/auro-radio-group.scss
@@ -34,3 +34,7 @@ fieldset {
 legend {
   margin-bottom: var(--ds-size-150, vac.$ds-size-150);
 }
+
+[auro-helptext] {
+  margin-top: var(--ds-size-150, 0.75rem);
+}
