--- a/components/checkbox/src/styles/auro-checkbox-group.scss
+++ b/components/checkbox/src/styles/auro-checkbox-group.scss
@@ -36,3 +36,8 @@ legend {
   margin-bottom: var(--ds-size-150, #{vac.$ds-size-150});
 }
 
+[auro-helptext] {
+  margin-top: var(--ds-size-150, 0.75rem);
+}
+
+
